donate popup's overflow fix

--- a/public/pages/donate/donate.css
+++ b/public/pages/donate/donate.css
@@ -160,7 +160,6 @@ main #aboutDontation h1 {
 
 .donation-modal-content {
     position: fixed;
-    overflow: scroll;
     top: -20%;
     border: none;
     border-radius: 20px;
@@ -188,7 +187,7 @@ main #aboutDontation h1 {
     width: 60%;
     height: 20%;
     border-color: #66697a;
-    border-width: 1px;
+    border-width: 1.5px;
     border-radius: 15px;
     transition: 0.4s;
     background-color: white;
@@ -218,6 +217,7 @@ main #aboutDontation h1 {
 
 @media (hover:hover) {
     .donation-modal-content button:hover {
+        border: none;
         background-color: #66697a;
         color:white;
         box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
@@ -231,6 +231,7 @@ main #aboutDontation h1 {
 
 @media(hover:none) {
     .donation-modal-content button:active {
+        border: none;
         background-color: whitesmoke;
         color:#66697a;
         box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
@@ -248,7 +249,6 @@ main #aboutDontation h1 {
     width: 60%;
     min-height: 20rem;
     position: fixed;
-    overflow: scroll;
     z-index: 0;
     background-color: white;
     flex-direction: column;
@@ -277,7 +277,6 @@ main #aboutDontation h1 {
 
 .qrModal {
     position: fixed;
-    overflow: scroll;
     z-index: 0;
     display: flex;
     flex-direction: column;
@@ -285,7 +284,7 @@ main #aboutDontation h1 {
     align-items: center;
     background-color:white;
     width: 40%;
-    height: 20rem;
+    height: 30rem;
     padding-bottom: 5%;
     border: none;
     border-radius: 15px;
@@ -303,8 +302,8 @@ main #aboutDontation h1 {
 
 
 .qrCodeBackground {
-    width: 90%;
-    height: 80%;
+    width: 100%;
+    height: 100%;
     background: url("/public/images/qrCode.webp");
     background-size: contain;
     background-repeat: no-repeat;
